--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     font-family:'Poppins',sans-serif;
     box-sizing: border-box;
 }
+html{
+    scroll-behavior: smooth;
+}
 body{
     background: rgb(4, 0, 0);
     color: #fff;
@@ -80,7 +83,7 @@ nav ul li a:hover::after{
     flex-wrap: wrap;
 }
 .about-col-1{
-    flex-basis: 30%;
+    flex-basis: 35%;
 }
 .about-col-1 img{
     width:100%;
@@ -315,4 +318,62 @@ form btn2{
     background: #262626;
     font-weight: 300;
     margin-top: 20px;
+}
+
+/* ................css for small screens............ */
+nav .fa-solid{
+    display: none;
+}
+@media only screen and (max-width:600px) {
+    .header-text{
+        margin-top: 30%;
+        font-size: 16px;
+    }
+    .header-text h1{
+        font-size: 30px;
+    }
+    nav .fa-solid{
+        display: block;
+        font-size: 25px;
+    }
+    nav ul{
+        background:#f4208a;
+        position: fixed;
+        top:0;
+        right: -600px;
+        /* left:0; */
+        width:200px;
+        height:100vh;
+        padding-top: 50px;
+        z-index: 2;
+        transition:right 0.5s;
+    }
+    nav ul li{
+        display: block;
+        margin: 25px;
+    }
+    nav ul .fa-solid{
+        position: absolute;
+        top:25px;
+        left:25px;
+        cursor: pointer;
+    }
+    .sub-title{
+        font-size: 40px;
+    }
+    .about-col-1,.about-col-2{
+        flex-basis: 60%;
+    }
+    .about-col-1{
+        margin-bottom: 30px;
+        margin-left: 20px;
+    }
+   .contact-left ,.contact-right{
+    flex-basis: 100%;
+   }
+}
+#msg{
+    color:#61b752;
+    margin-top: -40px;
+    display: block;
 }
